Alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -13,35 +13,31 @@ body{
 }
 h1,h2,h3,h4,h5,h6{
     text-align: center;
-    margin: 5px;
     color: #220f33;
+    margin: 8px;
 }
 
 /* Header styles */
 header{
-    height: 400px;
-    /* background-image: url("../media/space.jpg"); */
+    height: 500px;
+    /* Banner image */
+    background-image: url("../media/space.jpg");
     background-color: #af7795;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     border-bottom: 2px solid #0C1345;
     border-top: 2px solid #0C1345;
-}
-
-@media screen and (min-width:900px) {
-    header{
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        align-items: center;
-        align-content: center;
-        gap: 60px;
-    }
+    /* Content and text display */
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
 }
 
 main{
-    margin: 1rem 40px;
+    margin: 1rem 20px;
 }
 
 /* About section styles */
@@ -68,6 +64,7 @@ main{
         margin: 2em 10%;
         grid-template-rows: 1fr;
         grid-template-columns: 1fr 1fr;
+        align-items: center;
         column-gap: 60px;
     }
 }
@@ -77,11 +74,11 @@ main{
     background-color: #A5878F;
     border: 2px solid #0C1345;
     border-radius: 2em;
-    padding: 1em;
+    padding: 2em;
     margin: 2em 0;
 }
 /* Image gallery of game projects */
-#gallery{
+/* #gallery{
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: 1fr;
@@ -92,16 +89,16 @@ main{
     align-content: center;
     gap: 20px;
     margin: 2em 0;
-}
+} */
 #gallery img{
     width: 100%;
     height: auto;
 }
-#gallery div{
+/* #gallery div{
     padding: 20px;
-}
+} */
 @media screen and (min-width:900px){
-    #gallery{
+    /* #gallery{
         display: grid;
         grid-template-rows: repeat(4, 1fr);
         grid-template-columns: 1fr;
@@ -110,17 +107,27 @@ main{
                              "project3" "project4";
         gap: 20px;
         margin: 2em;
-    }
+    } */
     .project1,.project2,.project3,.project4{
         display: flex;
         flex-flow: row nowrap;
         gap: 40px;
+        margin: 2em 10px;
+        align-items: center;
     }
+}
+
+#art{
+    background-color: #A5878F;
+    border: 2px solid #0C1345;
+    border-radius: 2em;
+    padding: 1em;
+    margin: 2em 0;
 }
 
 /* Footer styles */
 footer{
-    height: 140px;
+    height: 180px;
     padding-top: 20px;
     background-color: #af7795;
     text-align: center;
@@ -132,11 +139,15 @@ footer{
     flex-flow: row nowrap;
     justify-content: center;
     align-content: center;
-    gap: 20px;
+    gap: 10px;
     margin: 1em 0;
 }
 .contactInfo a{
-    font-size: 28px;
+    font-size: 30px;
+}
+
+hr{
+    border: 1px solid #da1973;
 }
 
 /* Change all link colors for all states */
